# ChangeLog for media-video/minitube
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/minitube/ChangeLog,v 1.33 2010/07/06 22:18:42 hwoarang Exp $

  06 Jul 2010; Markos Chandras <hwoarang@gentoo.org> -minitube-0.8.1.ebuild,
  -minitube-0.9.ebuild, -minitube-1.0.ebuild:
  Remove old ebuilds

  15 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  minitube-1.0-r1.ebuild:
  x86 stable wrt bug #322691

  13 Jun 2010; Markos Chandras <hwoarang@gentoo.org> minitube-1.0-r1.ebuild:
  Fix gstreamer dependencies logic wrt bug #323489

  10 Jun 2010; Markos Chandras <hwoarang@gentoo.org> minitube-1.0-r1.ebuild:
  Stable on amd64 wrt bug #bug #322691

*minitube-1.0-r1 (10 Jun 2010)

  10 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  +minitube-1.0-r1.ebuild:
  Add gstreamer use flag since minitube works with xine and gstreamer phonon
  backends. Thanks to amak79 for pointing this out

  09 Jun 2010; Christoph Mende <angelos@gentoo.org> minitube-1.0.ebuild:
  Stable on amd64 wrt bug #322691

  18 May 2010; Markos Chandras <hwoarang@gentoo.org> -minitube-0.7.ebuild,
  -minitube-0.8.ebuild:
  Clean up old versions

  18 May 2010; Markos Chandras <hwoarang@gentoo.org> minitube-1.0.ebuild:
  Fix Spanish translation wrt bug #319703

*minitube-1.0 (04 May 2010)

  04 May 2010; Markos Chandras <hwoarang@gentoo.org> +minitube-1.0.ebuild:
  Version bump

  29 Apr 2010; Markos Chandras <hwoarang@gentoo.org> minitube-0.7.ebuild,
  minitube-0.8.ebuild, minitube-0.8.1.ebuild:
  Migrate to qt4-r2 eclass wrt bug #311481

  02 Apr 2010; Markos Chandras <hwoarang@gentoo.org> minitube-0.9.ebuild:
  Fix my previous commit

  02 Apr 2010; Markos Chandras <hwoarang@gentoo.org> minitube-0.9.ebuild:
  Adjust phonon dependencies

  29 Mar 2010; Markos Chandras <hwoarang@gentoo.org> minitube-0.9.ebuild:
  Ajdust dependencies. Fixes bug #302085
