@@ -1,4 +1,6 @@
 DIST minitube-1.0.tar.gz 193957 RMD160 0445647817c075e5fb445487b1ed86de563a43ab SHA1 089279b00d92ee5a2dc3a07b17bf8b8881e29b64 SHA256 6d57528cf29e53ef6ce1c5b26857d8a1a2ad1b9040f95e8bbd094d73c134a809
+DIST minitube-1.1.tar.gz 206135 RMD160 a27c2e63b8fc07f3ba4e1da28861ae57b6bba0cb SHA1 4531e421d6bade1e8422aa8041a13005b1ea5e7b SHA256 13eea479fcf4df67092b88f752520b1f399d14777eb249018b23356675ca6058
 EBUILD minitube-1.0-r1.ebuild 1633 RMD160 5276bec24af20ecdffb0681e7d16bc813298a085 SHA1 32c706be15a7512b2eb5233da801a3b3fef40c12 SHA256 58604d6fdb5a68e8696689ac07a4ab04a85e849bfb2c851a4ac6bc059c0ab3bb
-MISC ChangeLog 5027 RMD160 e60af7bf0ab6beb951c3995d09f56cc63afb9a00 SHA1 c247a7f6a600ba221837f5f2d3255894a61416df SHA256 78f68cd2ec8c94e8d995295d19febc486003dca6ca808fc26f41e9ed2a983021
+EBUILD minitube-1.1.ebuild 1630 RMD160 d07e00bf9d49e1b54dfab759d9f44fdb9a2a276c SHA1 8ac7c79989052326c19f17290c0a1c3a2960b116 SHA256 b5366ccd2233c94ac54cf4d8f56bf2a235cd97b78dd4a3e9138991d9b837f970
+MISC ChangeLog 5147 RMD160 1356d49baaedd97c63bc2f2caea5f730a675b1a0 SHA1 bc2323cecc4776728e0255489fefa9df1138c2f6 SHA256 f4bd6d7baa31f4f0d28bc831d50b20816c53809769724f6f74cf6befed29f8ac
 MISC metadata.xml 265 RMD160 e723dc6fc78de62b3144444b1329d9791b1f2099 SHA1 4ed7a4469aafc625f36fb28d3b7932d1c9e75f91 SHA256 218f4f107ec5040834a5d0d24c83e179cdd83cdb49a639fa29df53f479a680c7
