@@ -1,6 +1,11 @@
 # ChangeLog for media-video/minitube
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/minitube/ChangeLog,v 1.33 2010/07/06 22:18:42 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/minitube/ChangeLog,v 1.34 2010/07/30 10:50:03 hwoarang Exp $
+
+*minitube-1.1 (30 Jul 2010)
+
+  30 Jul 2010; Markos Chandras <hwoarang@gentoo.org> +minitube-1.1.ebuild:
+  Version bump
 
   06 Jul 2010; Markos Chandras <hwoarang@gentoo.org> -minitube-0.8.1.ebuild,
   -minitube-0.9.ebuild, -minitube-1.0.ebuild:
